--- a/welcomepage/web/index.html
+++ b/welcomepage/web/index.html
@@ -1,68 +1,8 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="stack.css">
+  <title>replaced by boostrap</title>
 </head>
 <body>
-    <div id="mainHeader" style="background-color:#2E2F34; color:white; height:23px">
-        <p style="margin-right:16px; padding:0px; ">Login | SignUp </p>
-	</div>
-    <div id="menuHeader">
-        <div id="logo" style="text-align:left; float:left;">
-        Logo
-        </div>
-        <div id ="menus" style="float:right">
-            <p>Menu1 | Menu2 | Menu3 | Menu4 | Menu5</p>
-        </div>
-    </div>
-    <div id ="header">
-        <h1 style="font-weight:100;">Customize and Run your Applications in a cost effective & Flexible Devops Testbed</h1>
-    </div>
-    <div id ="mainsection">
-        <div id ="section1">
-            <div id ="trailStack">
-                <h2>Trial Stack</h2>
-            </div>
-            <div id ="trialStackList">
-                <ul>
-                    <a href="http://example.com"><li> Build an aggregate of Apps & Ops in to a deployable customized stack</li></a>
-                    <br>
-                    <a href="http://example.com"><li>View, Start, Stop & Acess your customized stack</li></a>
-                </ul>
-            </div>
-        </div>
-        <div id ="section2">
-            <div id ="reservedStack">
-                <h2>Reserved Stack Sandbox</h2>
-            </div>
-            <div id="reservedStackList">
-                <ul>
-                    <a href="http://example.com"><li>Supports Full Devops CICD pipeline</li></a>
-                    <br>
-                    <a href="http://example.com"><li>Support for Stack Arifact Repository</li></a>
-                    <br>
-                    <a href="http://example.com"><li>Full Stack Administration</li></a>
-                    <br>
-                </ul>
-            </div>
-        </div>
-        <div id ="section2">
-            <div id ="customStack">
-                <h2>Custom Stack Solutions</h2>
-            </div>
-            <div id ="customStackList">
-                <ul>
-                    <li>Leverage code Accelators to customize stack of your Organization</li>
-                    <br>
-                    <li>Consulting Support</li>
-                    <dd> - Jump Struts<dd>
-                    <dd> - Boot Camps <dd>
-                    <dd> - POC Engagements <dd>
-                </ul>
-            </div>
-            </div>	 
-    </div>
-    <div id ="footer">
-    </div>
-
+  <h1>replaced by bootstrap</h1>
 </body>
 </html>
